--- a/package.json
+++ b/package.json
@@ -8,15 +8,12 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro",
-    "gh-deploy": "git push origin :gh-pages && git subtree push --prefix dist origin gh-pages",
-    "gh-deploy-init": "git push origin && git subtree push --prefix dist origin gh-pages"
+    "astro": "astro"
   },
   "dependencies": {
     "@astrojs/mdx": "^1.0.0",
     "@astrojs/rss": "^3.0.0",
     "@astrojs/sitemap": "^3.0.0",
-    "astro": "^3.0.7",
-    "gh-deploy": "^0.2.3"
+    "astro": "^3.0.7"
   }
 }
