--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@astrojs/mdx": "^1.0.0",
     "@astrojs/rss": "^3.0.0",
     "@astrojs/sitemap": "^3.0.0",
-    "astro": "^3.0.7"
+    "astro": "^3.0.7",
+    "firebase": "^10.3.1",
+    "firebase-admin": "^11.10.1"
   }
 }
