--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "astro": "^3.0.7",
     "astro-robots-txt": "^0.5.0",
     "firebase": "^10.3.1",
-    "firebase-admin": "^11.10.1"
+    "firebase-admin": "^11.10.1",
+    "ky": "^1.1.3"
   }
 }
